--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,6 +8,7 @@
 :root {
   --white: #fff;
   --black: #000;
+  --light-black: #222;
   --dark-900: #FAF0E6;
   --dark-700:  #f5f5f5;
   --wine: #722f37;
