--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,3 +1,44 @@
-.container{
-  color: red;
+.containerCenter {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
+
+.login {
+  width: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 2rem 1.5rem;
+
+  form {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  form button {
+    height: 40px;
+    font-size: 1.2rem;
+  }
+}
+
+.text {
+  margin-top: 1rem;
+  color: var(--light-black);
+  cursor: pointer;
+}
+
+@media (max-width: 620px) {
+  .login {
+    width: 90%;
+  }
+
+  .imgLogo {
+    width: 90%;
+  }
+}
+
