--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -14,6 +14,12 @@
   flex-direction: column;
   padding: 2rem 1.5rem;
 
+  h1 {
+    color: var(--wine);
+    padding-bottom: 1rem;
+    font-size: 20px;
+  }
+
   form {
     width: 90%;
     display: flex;
