--- a/src/components/ModalOrder/styles.module.scss
+++ b/src/components/ModalOrder/styles.module.scss
@@ -22,6 +22,10 @@
     color: var(--dark-900)
 }
 
+.table {
+    font-size: 1.4rem;
+}
+
 @media screen and (max-width: 700px){
     .container {
         width: 400px;
