--- a/src/pages/dashboard/styles.module.scss
+++ b/src/pages/dashboard/styles.module.scss
@@ -54,3 +54,9 @@
     border-radius: 6px 0 0 6px;
     margin-right: 1rem;
 }
+
+.emptyList {
+    color: var(--wine);
+    font-size: larger;
+    font-weight: bold;
+}
